@@ -114,6 +114,7 @@ Engine fixes:
 * Fixed incorrect activation of passive powers on death.
 * Reduced spam of identical combat text messages.
 * Fix unintended stacking in active effects display for effects that don't have the same icon.
+* XP gain is now prevented after the initial death frame. This still allows for the player to revive if they die and level up on the same frame.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
